[gd_scene load_steps=6 format=3 uid="uid://8t1li61altqh"]

[ext_resource type="Script" path="res://Powerup.gd" id="1_5gsix"]
[ext_resource type="Texture2D" uid="uid://b664x2tvkfdk1" path="res://art/powerup_sprite.png" id="2_gf5m1"]
[ext_resource type="Texture2D" uid="uid://bo1mtb0upc5wf" path="res://art/orange_particle.png" id="3_5ypcy"]
[ext_resource type="AudioStream" uid="uid://b66163acf1ul2" path="res://audio/powerup.mp3" id="4_20g3a"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ostbr"]
size = Vector2(36, 36)

[node name="Powerup" type="Area2D" groups=["powerups"]]
collision_layer = 16
collision_mask = 5
script = ExtResource("1_5gsix")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ostbr")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(9.53674e-07, 0)
scale = Vector2(0.45, 0.45)
texture = ExtResource("2_gf5m1")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-4.76837e-07, 3.33786e-06)
scale = Vector2(1.8, 1.8)

[node name="CollectedParticleEffect" type="CPUParticles2D" parent="."]
scale = Vector2(14.68, 14.56)
emitting = false
amount = 30
lifetime = 0.25
one_shot = true
explosiveness = 0.3
randomness = 1.0
lifetime_randomness = 1.0
texture = ExtResource("3_5ypcy")
emission_shape = 3
emission_rect_extents = Vector2(1, 1)
spread = 180.0
gravity = Vector2(0, 0)
angular_velocity_min = -90.0
angular_velocity_max = 90.0
scale_amount_min = 0.15
scale_amount_max = 0.25

[node name="CollectedSoundEffect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_20g3a")
pitch_scale = 1.2

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
